--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "NPUStudy-admin",
+    "name": "NPUStudy-admin", //项目名称
     "version": "3.3.0",
     "author": "HHStudyGroup",
     "description": "小瓜答题宝",
